force-app/main/default/objects/VS_Setting__mdt/VS_Setting__mdt.object-meta.xml
<CustomObject>
    <description>F-001 slot-booking-core (VS-02, EP-01). Single home for every tunable in the design so DHS can adjust operating rules (walk-in reserve %, cancel/reschedule cut-off, slot granularity, booking horizon, no-show threshold, reminder offsets) without a code deploy (rules/20 — Custom Metadata for tunables, no hardcoded values; A-003). One record per tunable, keyed by DeveloperName. Records: CutOffHours (D-010), WalkInReservePct (D-009), DefaultSlotGranularityMins (D-008), BookingHorizonDays (REQ-013), NoShowThresholdCount, ReminderOffsetsHours (OQ-005). CONTRACT: VS_Session__c's capacity formulas (VS-01) read this type's WalkInReservePct record's Value__c field by exact API name — do not rename the type, the WalkInReservePct record, or the Value__c field.</description>
    <label>VS Setting</label>
    <pluralLabel>VS Settings</pluralLabel>
</CustomObject>