force-app/main/default/objects/VS_Setting__mdt/fields/Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Value_Text__c</fullName>
    <label>Value (Text)</label>
    <description>Text/multi-value form of this configurable tunable, used only when the setting is inherently non-numeric or list-valued and Value__c does not fit (e.g. ReminderOffsetsHours holds a comma-separated list of hour offsets, "24,3", per OQ-005). Left blank on the purely numeric setting records, which use Value__c instead. Consuming Flow/Apex must parse this field's contents (e.g. split on comma) rather than assume a single number.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>