force-app/main/default/objects/VS_Setting__mdt/fields/VS_Value__c.field-meta.xml
<CustomField>
    <fullName>VS_Value__c</fullName>
    <label>Value</label>
    <description>Numeric value of this configurable tunable (rules/20 — Custom Metadata for config, no hardcoded values in Apex/Flow/formula; A-003). Populated for every numeric setting record (CutOffHours=4 D-010, WalkInReservePct=25 D-009, DefaultSlotGranularityMins=15 D-008, BookingHorizonDays=14, NoShowThresholdCount=3). Left blank on records whose value is non-numeric/multi-valued (see VS_Value_Text__c). CONTRACT — do not rename: VS_Session__c.VS_Walk_In_Reserve_Count__c's formula (VS-01) references this exact field as $CustomMetadata.VS_Setting__mdt.WalkInReservePct.VS_Value__c.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>